Added launching a new JVM for the each parallelism number, added RMI calls